--- a/styles.css
+++ b/styles.css
@@ -147,8 +147,43 @@ a:hover {
     background-size: 100%;
     opacity: 0.85;
     width: 100%;
-    height: 700px;
+    font-size: 1.1em;
 }
+
+#form {
+
+}
+
+.transparent {
+	zoom: 1;
+	filter: alpha(opacity=80);
+	opacity: 0.8;
+}
+
+input[type=text] {
+    width: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #afb4a5;
+  }
+
+  input[type=text]:focus {
+    border: 3px solid #e46a15;
+  }
+
+  textarea {
+    width: 50%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #afb4a5;
+    resize: none;
+  }
 
 #social {
   justify-content: start;
