--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ a:hover {
 #contact {
     margin: 0;
     background-image: url(avengers3.jpg);
-    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: 100%;
     opacity: 0.85;
     width: 100%;
