--- a/styles.css
+++ b/styles.css
@@ -164,6 +164,7 @@ input[type=text] {
     border: 2px solid #ccc;
     border-radius: 4px;
     background-color: #afb4a5;
+    color: #000;
   }
 
   input[type=text]:focus {
