--- a/styles.css
+++ b/styles.css
@@ -39,11 +39,17 @@ h1 {
   font-family: "Bangers", serif;
   font-size: 3em;
   color: #2b899e;
+  text-shadow: #afb4a5;
 }
 
 h2,
 h3 {
   font-family: "Bangers", serif;
+  text-shadow: #afb4a5;
+}
+
+h1, h2, h3 {
+  text-shadow: 0.8px 0.8px #afb4a5;
 }
 
 #turq {
@@ -163,8 +169,10 @@ input[type=text] {
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
-    background-color: #afb4a5;
+    /* background-color: #afb4a5; */
     color: #000;
+    background-color: #dfd6b6;
+    background-image: linear-gradient(315deg, #dfd6b6 0%, #a0d1f5 74%);
   }
 
   input[type=text]:focus {
@@ -179,7 +187,9 @@ input[type=text] {
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
-    background-color: #afb4a5;
+    /* background-color: #afb4a5; */
+    background-color: #dfd6b6;
+    background-image: linear-gradient(315deg, #dfd6b6 0%, #a0d1f5 74%);
     resize: none;
   }
 
